fixed optimal build